--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -10,7 +10,7 @@
 <body>
     <div class="nav-belt">
         <div class="logo">
-            <img src="./images/logo.png" alt="">
+            <img src="./logo.png" alt="">
         </div>
 
         <div class="address">
@@ -36,7 +36,7 @@
 
         <div class="right">
             <div class="flag">
-                <img src="./images/indflag.jpg" alt="">
+                <img src="./indflag.jpg" alt="">
                 <div class="en">
                     <span>EN</span>
                     <i class="fas fa-caret-down"></i>
@@ -89,49 +89,49 @@
     <div class="box">
         <div class="box-content">
             <h2>Clothes</h2>
-            <div class="box-img" style="background-image: url('images/box1_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('/box1_image.jpg');"></div>
             <p>See more</p>
     </div> 
     </div>
     <div class="box">
         <div class="box-content">
             <h2>Electronics</h2>
-            <div class="box-img" style="background-image: url('images/box2_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('/box2_image.jpg');"></div>
             <p>See more</p>
     </div> 
     </div>
     <div class="box">
         <div class="box-content">
             <h2>Home Decor</h2>
-            <div class="box-img" style="background-image: url('images/box3_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('/box3_image.jpg');"></div>
             <p>See more</p>
     </div> 
     </div>
     <div class="box">
         <div class="box-content">
             <h2>Health & Personal Care</h2>
-            <div class="box-img" style="background-image: url('images/box4_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('/box4_image.jpg');"></div>
             <p>See more</p>
     </div> 
     </div>
     <div class="box">
         <div class="box-content">
             <h2>Beauty Picks</h2>
-            <div class="box-img" style="background-image: url('images/box5_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('/box5_image.jpg');"></div>
             <p>See more</p>
     </div> 
     </div>
     <div class="box">
         <div class="box-content">
             <h2>Pet Care</h2>
-            <div class="box-img" style="background-image: url('images/box6_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('/box6_image.jpg');"></div>
             <p>See more</p>
     </div> 
     </div>
     <div class="box">
         <div class="box-content">
             <h2>New Arrival in Toys</h2>
-            <div class="box-img" style="background-image: url('images/box7_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('/box7_image.jpg');"></div>
             <p>See more</p>
     </div> 
     </div>
